<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.operaton.bpm.extension</groupId>
  <artifactId>operaton-javascript-polyglot</artifactId>
  <version>2.1.0</version>
  <packaging>jar</packaging>

  <name>Operaton JavaScript Polyglot</name>
  <description>Operaton process engine plugin that exposes first-class JSON process variables through the javascript-polyglot and typescript-polyglot script languages.</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>17</maven.compiler.release>
    <operaton.version>2.1.0</operaton.version>
    <spring-boot.version>4.0.6</spring-boot.version>
    <graal-js.version>25.0.2</graal-js.version>
    <typescript.version>5.9.3</typescript.version>
    <junit.version>6.0.3</junit.version>
    <assertj.version>3.27.7</assertj.version>
    <surefire.version>3.5.5</surefire.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.operaton.bpm</groupId>
      <artifactId>operaton-engine</artifactId>
      <version>${operaton.version}</version>
    </dependency>

    <dependency>
      <groupId>org.operaton.bpm</groupId>
      <artifactId>operaton-engine-plugin-spin</artifactId>
      <version>${operaton.version}</version>
    </dependency>

    <dependency>
      <groupId>org.operaton.spin</groupId>
      <artifactId>operaton-spin-dataformat-all</artifactId>
      <version>${operaton.version}</version>
    </dependency>

    <dependency>
      <groupId>org.graalvm.polyglot</groupId>
      <artifactId>polyglot</artifactId>
      <version>${graal-js.version}</version>
    </dependency>

    <dependency>
      <groupId>org.graalvm.polyglot</groupId>
      <artifactId>js</artifactId>
      <version>${graal-js.version}</version>
      <type>pom</type>
    </dependency>

    <dependency>
      <groupId>org.graalvm.js</groupId>
      <artifactId>js-scriptengine</artifactId>
      <version>${graal-js.version}</version>
    </dependency>

    <dependency>
      <groupId>org.webjars.npm</groupId>
      <artifactId>typescript</artifactId>
      <version>${typescript.version}</version>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-autoconfigure</artifactId>
      <version>${spring-boot.version}</version>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-test</artifactId>
      <version>${spring-boot.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.15.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire.version}</version>
        <configuration>
          <argLine>-Dpolyglot.engine.WarnInterpreterOnly=false</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
